2012-1-25  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-04.
    * R/AllClass: jags.parallel now contains rjags
    * R/jags.parallel: 
        1. add jags.seed so that jags.parallel will start with different inits.
        2. now jags.parallel computes DIC
    * R/update: update for jags.parallel now computes DIC
    * R/traceplot: now works with jags.parallel

2012-1-22  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-03.
    * R/AllClass: add rjags.parallel class
    * R/jags.parallel: fix a bug for not naming the sims.array correctly
    * R/recompile: add recompile() for the rjags.parallel class
    * R/update: add update() for the rjags.parallel class

2012-1-12  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.03-02.
    * R/jags.parallel: add new function that runs jags parallely

2011-8-8  Masanao Yajima <yajima@ucla.edu>  
    * DESCRIPTION (Version, Date): 0.02-29.
    * R/jags: Cleaned up the code.

2011-7-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-28.
    * R/recompile/jags: add end.adaptation=TRUE  

2011-7-21  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-16.
    * R/print: fix a bug that would print out NA when DIC=FALSE

2011-3-30  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-15.
    * R/print: fix a bug that would print out variable name wrongly

2011-3-17  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-14.
    * R/print: miscollect sds as means in printout

2011-3-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-13.
    * R/print: allow output to print with user-specified quantile

2010-12-8  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-11.
    * man/jags: \dontrun jags2, need to write a function to search for JAGS.

2010-9-28  Yu-Sung Su <ys463@columbia.edu>  